--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
+body {
+ height: 100vh;
+ width: 100%;
+ margin: 0;
+ background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5);
+ animation: gradientBG 15s ease infinite;
+ background-size: 400% 600%;
+}
+
+@keyframes gradientBG {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 10% 50%;
+  }
+
+  0% {
+    background-position: 0% 50%;
+  }
+}
+
+.token {
+  width: auto;
+  box-shadow: 0 8px 16px rgba(5,5,5,0.3);
+  padding: 20px 16px;
+  border-radius: 18px;
+  margin: 10px; 
+}
+
+img {
+  border: .3px rgba(#111111);
+  box-shadow: 10px 10px 8px rgba(#111111);
+  padding: 15px;
+  width: 150px;
+  margin-top: 10px;
+}
+
+.container-filled {
+  padding-top: 50px;
+  position: absolute;
+  width: 100%;
   text-align: center;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
